--- a/index.css
+++ b/index.css
@@ -50,6 +50,7 @@ article h2 {
 
 article p {
     color: #666; /* Couleur du texte du paragraphe */
+    margin-right: 10px;
 }
 
 article img {
@@ -65,6 +66,31 @@ article img {
     width: 50vh;
 }
 
+.article {
+    margin-top: 30px;
+    display: block;
+}
+
+table {
+    margin-top: 20px;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+main p {
+    margin: 0 20px;
+}
 
 footer {
     background-color: rgb(223, 186, 103);
@@ -92,15 +118,12 @@ footer nav p{
 }
 
 .login-box {
+    margin: 50px 0 50px 27%;
     width: 500px;
     padding: 100px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
-    position: absolute; /* Position absolue */
-    top: 50%; /* Aligner le haut de la login-box au milieu vertical */
-    left: 50%; /* Aligner la gauche de la login-box au milieu horizontal */
-    transform: translate(-50%, -50%); /* Décaler la boîte de moitié de sa taille pour la centrer parfaitement */
 }
 
 .login-box label {
