--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body{
 }
 
 header {
-    background-color: coral; /* Couleur de fond du header */
+    background-color: rgb(0, 0, 0); /* Couleur de fond du header */
     padding: 10px; /* Espacement autour du contenu du header */
     align-items: center; /* Alignement vertical des éléments */
     display: flex; /* Utilisation de flexbox pour aligner les éléments */
@@ -75,6 +75,7 @@ article time {
 .blog{
     justify-content: space-between; /* Alignement des éléments sur les extrémités */
     width: 50vh;
+    color: white;
 }
 
 .article {
@@ -126,7 +127,7 @@ aside article p {
 }
 
 footer {
-    background-color: coral;
+    background-color: rgb(0, 0, 0);
     color: #ffffff;
     text-align: center;
     bottom: 0; /* Aligner le bas du footer au bas de la page */
@@ -140,6 +141,7 @@ footer nav a{
     display: flex;
     justify-content: center;
     font-size: 17px;
+    color: white;
 }
 
 footer nav .logo {
@@ -173,7 +175,7 @@ footer nav p{
 .login-box button {
     width: 107%;
     padding: 15px;
-    background-color:  coral;
+    background-color:  rgb(0, 0, 0);
     border: none;
     color: #fff;
     cursor: pointer;
